--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,13 @@
 
 #######################################################################################
 # Jekyll site settings
-title: YOUR BOOK NAME
-author: YOUR AUTHOR NAME
-email: YOUR EMAIL
+title: Daily Cal and Data Journalism
+author: Editorial Staff
+email: john.gage@gmail.com
 description: >-
-  This is an example book built with Jupyter Books.
-
-baseurl: /               # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
-url: YOUR URL              # the base hostname & protocol for your site, e.g. http://example.com
+  Framework for Daily Cal data science
+baseurl: /dailycal            # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
+url: john.gage.github.io            # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #######################################################################################
