--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -27,8 +27,10 @@
   not_numbered: true
 - title: Editorial,August 15,2019- BART,annotated
   url: /BART/2019-Aug-15
+  not_numbered: true
 - title: Data Journalism
   url: /datajournalism/databackedjournalism
+  expand_sections: true
   sections:
     - title: UCB Data Science 88 for Fall 2019
       url: /datajournalism/jdata88
