--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -28,6 +28,8 @@
 - title: Editorial, August 15,2019- BART,annotated
   url: /BART/2019-Aug-15
   not_numbered: true
+- title: BART Data sources
+  url: /BART/datasources
 - title: Data Journalism
   url: /datajournalism/databackedjournalism
   expand_sections: true
