fix toc BART Survey

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -38,7 +38,7 @@
       url: /datajournalism/jdata88
     - title: Scientific Data journalism
       url: /datajournalism/sciencejournalism
-- title: BART customer Analysis
+- title: BART Customer Satisfaction Survey
   url: /notebooks/bartpop
 
 # External link
