--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -25,7 +25,7 @@
 - title: Daily Cal and Data Science
   url: /intro
   not_numbered: true
-- title: Editorial, August 15,2019- BART,annotated
+- title: Daily Cal Editorial, August 15,2019 - annotated
   url: /BART/2019-Aug-15
   not_numbered: true
 - title: BART Data sources
