--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -30,7 +30,7 @@
   not_numbered: true
 - title: Jupyter Books
   url: /01BerkeleyDS/jupyterbooks
-
+  not_numbered: true
 - title: Data Journalism
   url: /datajournalism/databackedjournalism
   not_numbered: true
@@ -40,15 +40,20 @@
       url: /datajournalism/sciencejournalism
     - title: UCB Data Science 88 for Fall 2019
       url: /datajournalism/jdata88
+    - title: Desk/Beat organization by Institution or Flow
+      url: /datajournalism/beatorganization
 
 
 - title: Daily Cal Editorial, August 15,2019 - annotated
   url: /BART/2019-Aug-15
   not_numbered: true
-- title: BART Data sources
-  url: /BART/datasources
-- title: BART Customer Satisfaction Survey
-  url: /notebooks/bartpop
+  sections:
+  - title: BART Data sources
+    url: /BART/datasources
+    not_numbered: true
+  - title: BART Customer Satisfaction Survey
+    url: /notebooks/bartpop
+    not_numbered: true
 
 # External link
 #- title: GitHub repository
